# CodeMate

./: .gitignore
ai-agent-test/: bailian.py  main.py  ollama-stream.py  pyproject.toml
ai-agent-test/app/bailian/: __init__.py  bailian-qwq.py  bailian.py  bailian_prompt.py  bailian_prompt_old.py  bailian_tools.py  common.py
ai-agent-test/app/ollama/: ollama-invoke.py
